tests/snapshots/parser__block.snap
---
source: tests/parser.rs
---
ParserReturn {
    program: Program {
        span: Span {
            start: 0,
            end: 5,
        },
        source: "{1;};",
        is_complex: true,
        body: [
            Block(
                BlockExpression {
                    span: Span {
                        start: 0,
                        end: 4,
                    },
                    expressions: [
                        NumericLiteral(
                            NumericLiteral {
                                span: Span {
                                    start: 1,
                                    end: 2,
                                },
                                value: 1.0,
                                raw: "1",
                            },
                        ),
                    ],
                },
            ),
        ],
    },
    errors: [],
    panicked: false,
}
