tests/snapshots/parser__unterminated_string.snap
---
source: tests/parser.rs
expression: out
---
ParserReturn {
    program: Program {
        span: Span {
            start: 0,
            end: 0,
        },
        source: "'hello wor-",
        is_complex: false,
        body: [],
    },
    errors: [
        Diagnostic {
            inner: DiagnosticInner {
                message: "Unterminated string",
                labels: Some(
                    [
                        LabeledSpan {
                            label: None,
                            span: SourceSpan {
                                offset: SourceOffset(
                                    0,
                                ),
                                length: 0,
                            },
                            primary: false,
                        },
                    ],
                ),
                help: None,
                severity: Error,
            },
        },
    ],
    panicked: true,
}
